api/k8s/api.deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: s3-api
  namespace: s3-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: s3-api
  template:
    metadata:
      labels:
        app: s3-api
    spec:
      volumes:
        - name: s3-api-jwt-secret
          secret:
            secretName: s3-api-jwt-secret
        - name: storage-cluster-config
          secret:
            secretName: storage-cluster-config   
      containers:
        - name: s3-api
          image: gitlab.local:5050/anthonybudd/api:master
          imagePullPolicy: Always
          lifecycle:
            postStart:
              exec:
                command: ["/bin/bash", "-c", "sequelize db:migrate"]
          ports:
          - containerPort: 80
          volumeMounts:
          - name: s3-api-jwt-secret
            mountPath: "/app/private.pem"
            subPath: private.pem
          - name: s3-api-jwt-secret
            mountPath: "/app/public.pem"
            subPath: public.pem
          - name: storage-cluster-config
            mountPath: "/app/config"
            subPath: storage-config
