api/k8s/api.ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: s3-api
  name: s3-ingress
  annotations:
    kubernetes.io/ingress.class: "traefik"
spec:
  rules:
  - host: api.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: s3-api
            port:
              number: 80
