api/k8s/api.ssl.ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: s3-api
  name: s3-ingress
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    kubernetes.io/ingress.class: "traefik"
spec:
  tls:
  - hosts:
    - s3-api.anthonybudd.io
    secretName: s3-api-anthonybudd-io-cert
  rules:
  - host: s3-api.anthonybudd.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: s3-api
            port:
              number: 80
